sources = [
    'Application.vala',
    'MainWindow.vala',
    'PlaybackManager.vala',
    'DBus/MediaKeyListener.vala',
    'Widgets/AlbumImage.vala',
    'Widgets/SeekBar.vala'
]

executable(
    meson.project_name(),
    gresource,
    sources,
    dependencies: dependencies,
    install: true
)
